@@ -4,6 +4,8 @@ Revision history for Exobrain
 
     * API: `use Exobrain` automatically enables Method::Signatures.
     * DISTRO: HabitRPG is now packaged separately as Exobrain::HabitRPG
+    * API: Exobrain::Agent has better documentation and functionality.
+    * TESTING: Better testing for Exobrain::Agent.
 
 1.07      2014-03-04 22:46:36PST-0800 America/Los_Angeles
 
